# rag-agro

./: README  ingestion.py  main.py  pyproject.toml
backend/: core.py
